redenomination updates for runtime main, staking
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/pallets/wnodl/Cargo.toml
+++ b/pallets/wnodl/Cargo.toml
@@ -21,11 +21,11 @@ sp-std = { git = "https://github.com/paritytech/substrate", default-features = f
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
 
 support = { path = "../../support" }
+pallet-reserve = { path = "../../pallets/reserve", optional = true, default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate", optional = true, default-features = false , branch = "polkadot-v0.9.17" }
 
 [dev-dependencies]
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
-pallet-reserve = { path = "../../pallets/reserve", default-features = false }
 
 [features]
 default = ["std"]
