pallet-staking integration to eden runtime
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -27,7 +27,7 @@ std = [
   "pallet-membership/std",
   "pallet-multisig/std",
   "pallet-offences/std",
-  "pallet-poa/std",
+  "pallet-staking/std",
   "pallet-randomness-collective-flip/std",
   "pallet-reserve/std",
   "pallet-scheduler/std",
@@ -90,6 +90,8 @@ runtime-benchmarks = [
   "pallet-timestamp/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
   "pallet-xcm/runtime-benchmarks",
+  "pallet-staking/runtime-benchmarks",
+  "pallet-offences/runtime-benchmarks",
   "xcm/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
   "xcm-executor/runtime-benchmarks",
@@ -129,7 +131,9 @@ pallet-multisig = { git = "https://github.com/paritytech/substrate", default-fea
 pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
 pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
 pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
-pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
+pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, features = [
+  "historical",
+], branch = "polkadot-v0.9.17" }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
 pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
 pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
@@ -171,7 +175,7 @@ primitives = { default-features = false, path = "../../primitives" }
 pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
 pallet-amendments = { default-features = false, path = "../../pallets/amendments" }
 pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
-pallet-poa = { default-features = false, path = "../../pallets/poa" }
+pallet-staking = { default-features = false, path = "../../pallets/staking" }
 pallet-emergency-shutdown = { default-features = false, path = "../../pallets/emergency-shutdown" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
