--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,5 +14,15 @@
         "files.watcherExclude": {
             "**/target/**": true
         }
-    }
+    },
+    // Add the IDs of extensions you want installed when the container is created.
+    "extensions": [
+        "vadimcn.vscode-lldb",
+        "serayuzgur.crates",
+        "ms-azuretools.vscode-docker",
+        "tamasfe.even-better-toml",
+        "GitHub.copilot",
+        "eamodio.gitlens",
+        "matklad.rust-analyzer"
+    ]
 }
