--- a/nodes/staking/Cargo.toml
+++ b/nodes/staking/Cargo.toml
@@ -21,7 +21,7 @@ path = "src/main.rs"
 # third-party dependencies
 jsonrpc-core = "18.0.0"
 clap = { version = "3.0", features = ["derive"], optional = true }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
+codec = { package = "parity-scale-codec", version = "3.0.0" }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.71"
 futures = "0.3.16"
