runtime integration test bringup
Signed-off-by: R.Rajeshkumar <rajesh@nodle.com>

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -22,6 +22,8 @@ std = [
   "pallet-collective/std",
   "pallet-emergency-shutdown/std",
   "pallet-grants/std",
+  "pallet-currency-adapter/std",
+  'pallet-traits/std',
   "pallet-im-online/std",
   "pallet-mandate/std",
   "pallet-membership/std",
@@ -41,8 +43,11 @@ std = [
   "pallet-utility/std",
   "pallet-aura/std",
   "pallet-xcm/std",
+  "pallet-asset-registry/std",
   "polkadot-parachain/std",
   "polkadot-runtime-common/std",
+  "pallet-assets/std",
+  "pallet-xcm-helper/std",
   "xcm/std",
   "xcm-builder/std",
   "xcm-executor/std",
@@ -73,6 +78,13 @@ std = [
   "sp-transaction-pool/std",
   "sp-version/std",
   "sp-npos-elections/std",
+  "orml-oracle/std",
+  "orml-oracle-rpc-runtime-api/std",
+  "orml-traits/std",
+  "orml-xcm-support/std",
+  "orml-xtokens/std",
+  "orml-xcm/std",
+  "orml-vesting/std",
 ]
 runtime-benchmarks = [
   "frame-benchmarking",
@@ -94,6 +106,9 @@ runtime-benchmarks = [
   "pallet-uniques/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
   "pallet-xcm/runtime-benchmarks",
+  "pallet-assets/runtime-benchmarks",
+  "pallet-asset-registry/runtime-benchmarks",
+  "pallet-xcm-helper/runtime-benchmarks",
   "xcm/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
   "xcm-executor/runtime-benchmarks",
@@ -103,6 +118,13 @@ try-runtime = [
   "frame-executive/try-runtime",
   "frame-try-runtime",
   "frame-system/try-runtime",
+  "pallet-assets/try-runtime",
+  "pallet-asset-registry/try-runtime",
+  "pallet-xcm-helper/try-runtime",
+  "orml-oracle/try-runtime",
+  "orml-xtokens/try-runtime",
+  "orml-xcm/try-runtime",
+  "orml-vesting/try-runtime",
 ]
 
 [dependencies]
@@ -139,6 +161,7 @@ pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/parityt
 pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-aura = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.20" }
+pallet-assets = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
 polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
 polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
@@ -172,6 +195,17 @@ sp-npos-elections = { git = "https://github.com/paritytech/substrate", default-f
 sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.20" }
 frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20", optional = true }
 primitives = { default-features = false, path = "../../primitives" }
+
+# ORML dependencies
+orml-oracle = { git = 'https://github.com/NodleCode/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.20" }
+orml-oracle-rpc-runtime-api= { git = 'https://github.com/NodleCode/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.20" }
+orml-traits= { git = 'https://github.com/NodleCode/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.20" }
+orml-vesting= { git = 'https://github.com/NodleCode/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.20" }
+orml-xcm= { git = 'https://github.com/NodleCode/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.20" }
+orml-xcm-support= { git = 'https://github.com/NodleCode/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.20" }
+orml-xtokens= { git = 'https://github.com/NodleCode/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.20" }
+
+# Nodle dependencies
 pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
 pallet-amendments = { default-features = false, path = "../../pallets/amendments" }
 pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
@@ -179,6 +213,10 @@ pallet-poa = { default-features = false, path = "../../pallets/poa" }
 pallet-emergency-shutdown = { default-features = false, path = "../../pallets/emergency-shutdown" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
+pallet-traits = { default-features = false, path = "../../pallets/traits" }
+pallet-currency-adapter = { default-features = false, path = "../../pallets/currency-adapter" }
+pallet-asset-registry = { default-features = false, path = "../../pallets/asset-registry" }
+pallet-xcm-helper = { default-features = false, path = '../../pallets/xcm-helper' }
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
