--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -18,7 +18,8 @@ std = [
 	"sp-consensus-aura/std",
 	"xcm-executor/std",
 	"xcm/std",
-	"polkadot-parachain/std"
+	"polkadot-parachain/std",
+	"cumulus-primitives-core/std",
 ]
 
 [dependencies]
@@ -37,3 +38,4 @@ sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-f
 xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.20" }
 xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.20" }
 polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
+cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', default-features = false, branch = 'polkadot-v0.9.20' }
