--- a/runtimes/integration-tests/Cargo.toml
+++ b/runtimes/integration-tests/Cargo.toml
@@ -1,99 +1,16 @@
 [package]
-authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
+authors = ["Nodle Team"]
 edition = "2021"
-name = "runtime-main"
-version = "2.0.18"
-
-[features]
-default = ["std"]
-std = [
-  "frame-executive/std",
-  "frame-support/std",
-  "frame-system/std",
-  "frame-try-runtime/std",
-  "primitives/std",
-  "frame-system-rpc-runtime-api/std",
-  "pallet-allocations/std",
-  "pallet-amendments/std",
-  "pallet-authority-discovery/std",
-  "pallet-authorship/std",
-  "pallet-babe/std",
-  "pallet-balances/std",
-  "pallet-collective/std",
-  "pallet-emergency-shutdown/std",
-  "pallet-grandpa/std",
-  "pallet-grants/std",
-  "pallet-im-online/std",
-  "pallet-mandate/std",
-  "pallet-membership/std",
-  "pallet-multisig/std",
-  "pallet-offences/std",
-  "pallet-poa/std",
-  "pallet-randomness-collective-flip/std",
-  "pallet-reserve/std",
-  "pallet-scheduler/std",
-  "pallet-preimage/std",
-  "pallet-session/std",
-  "pallet-timestamp/std",
-  "pallet-transaction-payment/std",
-  "pallet-transaction-payment-rpc-runtime-api/std",
-  "pallet-utility/std",
-  "pallet-wnodl/std",
-  "codec/std",
-  "polkadot-runtime-common/std",
-  "safe-mix/std",
-  "serde",
-  "sp-api/std",
-  "sp-application-crypto/std",
-  "sp-authority-discovery/std",
-  "sp-consensus-babe/std",
-  "sp-block-builder/std",
-  "sp-core/std",
-  "sp-inherents/std",
-  "sp-io/std",
-  "sp-offchain/std",
-  "sp-runtime/std",
-  "sp-session/std",
-  "sp-staking/std",
-  "sp-std/std",
-  "sp-transaction-pool/std",
-  "sp-version/std",
-  "sp-npos-elections/std",
-]
-runtime-benchmarks = [
-  "frame-benchmarking",
-  "frame-support/runtime-benchmarks",
-  "frame-system/runtime-benchmarks",
-  "frame-system-benchmarking",
-  "pallet-allocations/runtime-benchmarks",
-  "pallet-amendments/runtime-benchmarks",
-  "pallet-babe/runtime-benchmarks",
-  "pallet-balances/runtime-benchmarks",
-  "pallet-collective/runtime-benchmarks",
-  "pallet-emergency-shutdown/runtime-benchmarks",
-  "pallet-grandpa/runtime-benchmarks",
-  "pallet-grants/runtime-benchmarks",
-  "pallet-im-online/runtime-benchmarks",
-  "pallet-multisig/runtime-benchmarks",
-  "pallet-reserve/runtime-benchmarks",
-  "pallet-scheduler/runtime-benchmarks",
-  "pallet-preimage/runtime-benchmarks",
-  "pallet-timestamp/runtime-benchmarks",
-  "pallet-utility/runtime-benchmarks",
-  "pallet-wnodl/runtime-benchmarks",
-  "sp-runtime/runtime-benchmarks",
-]
-try-runtime = [
-  "frame-executive/try-runtime",
-  "frame-try-runtime",
-  "frame-system/try-runtime",
-]
+name = "runtime-eden-xcm-test"
+version = "1.0.0"
 
 [dependencies]
 static_assertions = "1.1.0"
 getrandom = { version = "0.2", features = ["js"] }
 safe-mix = { version = "1.0.1", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
+parity-scale-codec = { version = "3.1.2", default-features = false, features = [
+  "derive",
+] }
 serde = { version = "1.0.136", optional = true, features = ["derive"] }
 scale-info = { version = "2.1", default-features = false, features = [
   "derive",
@@ -104,30 +21,41 @@ frame-executive = { git = "https://github.com/paritytech/substrate", default-fea
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
+pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
-pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
-pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-im-online = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
-pallet-preimage = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
-pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, features = [
-  "historical",
-], branch = "polkadot-v0.9.20" }
+pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
+pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
+pallet-aura = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.20" }
+pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
+polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
 polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
+xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
+xcm-builder = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
+xcm-executor = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.20" }
+cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
+cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
+cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
+cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
+cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
+cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
+cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
+cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
+parachain-info = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "polkadot-v0.9.20" }
 sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
-sp-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
@@ -141,6 +69,8 @@ sp-std = { git = "https://github.com/paritytech/substrate", default-features = f
 sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
 sp-npos-elections = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
+sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.20" }
+frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20", optional = true }
 primitives = { default-features = false, path = "../../primitives" }
 pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
 pallet-amendments = { default-features = false, path = "../../pallets/amendments" }
@@ -149,9 +79,20 @@ pallet-poa = { default-features = false, path = "../../pallets/poa" }
 pallet-emergency-shutdown = { default-features = false, path = "../../pallets/emergency-shutdown" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
-pallet-wnodl = { default-features = false, path = "../../pallets/wnodl" }
-support = { path = "../../support" }
-frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20", optional = true }
+runtime-eden = { path = "../eden" }
 
-[build-dependencies]
-substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
+[dev-dependencies]
+env_logger = '0.9.0'
+log = '0.4.14'
+cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = "polkadot-v0.9.20" }
+cumulus-test-relay-sproof-builder = { git = 'https://github.com/paritytech/cumulus.git', branch = "polkadot-v0.9.20" }
+polkadot-primitives = { git = 'https://github.com/paritytech/polkadot.git', branch = "release-v0.9.20" }
+polkadot-runtime = { git = 'https://github.com/paritytech/polkadot.git', branch = "release-v0.9.20" }
+polkadot-runtime-parachains = { git = 'https://github.com/paritytech/polkadot.git', branch = "release-v0.9.20" }
+sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
+sp-trie = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
+sp-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
+statemine-runtime = { git = 'https://github.com/paritytech/cumulus.git', branch = "polkadot-v0.9.20" }
+statemint-runtime = { git = 'https://github.com/paritytech/cumulus.git', branch = "polkadot-v0.9.20" }
+# xcm-emulator = { git = 'https://github.com/shaunxw/xcm-simulator.git', rev = '6c358483d8e119cd3b631ebb14d3b0cf0041d94e' }
+xcm-emulator = { git = 'https://github.com/NodleCode/xcm-simulator.git', branch = "polkadot-v0.9.20" }
