--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,13 +84,13 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --features=try-runtime
+          args: --release --features=try-runtime -p nodle-parachain
 
       - name: Try Runtime
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: --release --bin nodle-main --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} on-runtime-upgrade live -u ${{ env.try-runtime-uri }}
+          args: --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} on-runtime-upgrade live -u ${{ env.try-runtime-uri }}
 
   fmt:
     runs-on: ubuntu-latest
