--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ env:
   target: wasm32-unknown-unknown
   tarpaulin-vers: '0.18.4'
   try-runtime-chain: dev
-  try-runtime-uri: wss://nodle.api.onfinality.io:443/public-ws
+  try-runtime-uri: wss://nodle-parachain.api.onfinality.io:443/public-ws
 
 jobs:
   test:
