--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -59,5 +59,5 @@ jobs:
     - name: Archive Binary
       uses: actions/upload-artifact@v2
       with:
-        name: nodle-parachain
+        name: nodle-parachain-${{ matrix.os }}
         path: ./target/release/nodle-parachain
