--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,9 @@ on:
   pull_request:
 
 env:
-  nightly: nightly-2021-11-01
+  nightly: nightly
   target: wasm32-unknown-unknown
-  tarpaulin-vers: '0.18.4'
+  tarpaulin-vers: '0.20.0'
   try-runtime-chain: dev
   try-runtime-uri: wss://nodle-parachain.api.onfinality.io:443/public-ws
 
