run clippy in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         toolchain: ${{ env.nightly }}
         override: true
         target: ${{ env.target }}
-        components: rustfmt
+        components: rustfmt,clippy
 
     - name: Cache cargo registry
       uses: actions/cache@v2.1.7
@@ -55,6 +55,13 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: fmt
+
+    - name: Clippy
+      uses: actions-rs/clippy-check@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        args: --all-features
+        toolchain: ${{ env.nightly }}
 
     - name: Run cargo-tarpaulin
       uses: actions-rs/tarpaulin@v0.1
