use nightly rustfmt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
     - name: Fmt
       uses: actions-rs/cargo@v1
       with:
+        toolchain: ${{ env.nightly }}
         command: fmt
 
     - name: Clippy
