configure devcontainer clippy

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,19 @@
         "files.watcherExclude": {
             "**/target/**": true
         },
-        "rust-analyzer.checkOnSave.command": "clippy"
+        "rust-analyzer.checkOnSave.command": "clippy",
+        "rust-analyzer.checkOnSave.features": "all",
+        "rust-analyzer.checkOnSave.extraArgs": [
+            "--",
+            "-A",
+            "clippy::type_complexity",
+            "-A",
+            "clippy::identity_op",
+            "-A",
+            "clippy::boxed_local",
+            "-D",
+            "dead_code"
+        ]
     },
     // Add the IDs of extensions you want installed when the container is created.
     "extensions": [
