use correct rust analyzer extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,6 +36,6 @@
         "tamasfe.even-better-toml",
         "GitHub.copilot",
         "eamodio.gitlens",
-        "matklad.rust-analyzer"
+        "rust-lang.rust-analyzer"
     ]
 }
