--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       uses: actions-rs/tarpaulin@v0.1
       with:
         version: ${{ env.tarpaulin-vers }}
-        args: '--avoid-cfg-tarpaulin --all-features --bin nodle-parachain --timeout 120'
+        args: '--avoid-cfg-tarpaulin --all-features --workspace --timeout 120'
 
     - name: Upload to Codecov
       uses: codecov/codecov-action@v3.0.0
@@ -89,7 +89,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: --release --workspace --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} on-runtime-upgrade live -u ${{ env.try-runtime-uri }}
+          args: --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} on-runtime-upgrade live -u ${{ env.try-runtime-uri }}
 
   fmt:
     runs-on: ubuntu-latest
