--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -128,6 +128,7 @@ try-runtime = [
 ]
 
 [dependencies]
+smallvec = '1.6.1'
 static_assertions = "1.1.0"
 getrandom = { version = "0.2", features = ["js"] }
 safe-mix = { version = "1.0.1", default-features = false }
