exclude problematic crates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       uses: actions-rs/tarpaulin@v0.1
       with:
         version: ${{ env.tarpaulin-vers }}
-        args: '--avoid-cfg-tarpaulin --all-features --workspace --timeout 120'
+        args: '--avoid-cfg-tarpaulin --all-features --workspace --timeout 120 --exclude runtimes-eden runtimes-main runtimes-staking nodle-chain nodle-parachain nodle-staking --exclude-files **/mock.rs **/weights.rs **/weights/*'
 
     - name: Upload to Codecov
       uses: codecov/codecov-action@v3.0.0
