--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -3,6 +3,7 @@ name: Rust AutoDoc
 on:
   push:
     branches: master
+  pull_request:
 
 jobs:
 
@@ -11,19 +12,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-  
-    - name: Cache cargo registry  
-      uses: actions/cache@v2.1.7  
-      with: 
-        path: ~/.cargo/registry 
+
+    - name: Cache cargo registry
+      uses: actions/cache@v2.1.7
+      with:
+        path: ~/.cargo/registry
         key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-registry-
 
-    - name: Cache cargo index 
-      uses: actions/cache@v2.1.7  
-      with: 
-        path: ~/.cargo/git  
+    - name: Cache cargo index
+      uses: actions/cache@v2.1.7
+      with:
+        path: ~/.cargo/git
         key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-index-
@@ -40,8 +41,8 @@ jobs:
       run: ./scripts/init.sh
 
     - name: Build the docs
-      run: cargo doc --all
-    
+      run: cargo doc --all --no-deps --all-features
+
     - name: Deploy the docs
       uses: peaceiris/actions-gh-pages@v3
       with:
