--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -41,7 +41,7 @@ jobs:
       run: ./scripts/init.sh
 
     - name: Build the docs
-      run: cargo doc --all --no-deps --all-features
+      run: cargo doc --all --no-deps
 
     - name: Deploy the docs
       uses: peaceiris/actions-gh-pages@v3
