--- a/pallets/allocations/Cargo.toml
+++ b/pallets/allocations/Cargo.toml
@@ -16,6 +16,7 @@ std = [
   "sp-io/std",
   "sp-runtime/std",
   "sp-std/std",
+  "pallet-membership/std",
   "pallet-emergency-shutdown/std",
 ]
 runtime-benchmarks = [
@@ -37,6 +38,7 @@ pallet-balances = { git = "https://github.com/paritytech/substrate", default-fea
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
+pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
 pallet-emergency-shutdown = { default-features = false, path = "../emergency-shutdown" }
 support = { path = "../../support" }
 
