--- a/pallets/poa/Cargo.toml
+++ b/pallets/poa/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-poa"
-version = "2.0.20"
+version = "2.0.21"
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2021"
 
@@ -12,9 +12,11 @@ std = [
   "frame-support/std",
   "frame-system/std",
   "pallet-session/std",
+  "pallet-membership/std",
   "sp-io/std",
   "sp-runtime/std",
   "sp-std/std",
+  "sp-staking/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
 
@@ -30,7 +32,9 @@ pallet-session = { git = "https://github.com/paritytech/substrate", default-feat
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
+sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
 
 [dev-dependencies]
 sp-tracing = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
+pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.20" }
