--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -32,7 +32,7 @@ serde = { version = "1.0.132", features = ["derive"] }
 hex-literal = "0.3.4"
 
 # RPC related Dependencies
-jsonrpc-core = "18.0.0"
+jsonrpsee = { version = "0.14.0", features = ["server"] }
 
 # Local Dependencies
 runtime-eden = { path = "../runtimes/eden" }
@@ -66,6 +66,7 @@ sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polk
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
+sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 
 ## Substrate Primitive Dependencies
 sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
@@ -97,8 +98,8 @@ cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus",
 cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
 
 # Polkadot dependencies
-polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
-polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
-polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.20" }
+polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
+polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
+polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
+polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
+xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25" }
