--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -17,7 +17,6 @@ path = "src/main.rs"
 
 [features]
 runtime-benchmarks = [
-	"frame-benchmarking",
 	"runtime-eden/runtime-benchmarks",
 	"polkadot-cli/runtime-benchmarks",
 ]
@@ -39,13 +38,13 @@ runtime-eden = { path = "../runtimes/eden" }
 primitives = { version = "2.0.17", path = "../primitives" }
 
 # Substrate Dependencies
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", optional = true }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 
-frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
+substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 
 ## Substrate Client Dependencies
