integration to xcm-emulator & integration test
Signed-off-by: R.Rajeshkumar <rajesh@nodle.com>

--- a/pallets/traits/Cargo.toml
+++ b/pallets/traits/Cargo.toml
@@ -9,24 +9,24 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec         = { package = 'parity-scale-codec', version = "3.1.2", features = ['max-encoded-len'], default-features = false }
-frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20", default-features = false }
-frame-system  = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20", default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+frame-system  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
 log           = { version = "0.4", default-features = false }
 num-bigint    = { default-features = false, version = "0.4" }
 num-traits    = { default-features = false, version = "0.2" }
 primitives    = { package = 'primitives', path = '../../primitives', default-features = false }
 scale-info    = { version = "2.1", default-features = false, features = ['derive'] }
-sp-core       = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20", default-features = false }
-sp-io         = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20", default-features = false }
-sp-runtime    = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20", default-features = false }
-sp-std        = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20", default-features = false }
-xcm           = { git = 'https://github.com/paritytech/polkadot.git', branch = "release-v0.9.20", default-features = false }
-xcm-builder   = { git = 'https://github.com/paritytech/polkadot.git', branch = "release-v0.9.20", default-features = false }
-xcm-executor  = { git = 'https://github.com/paritytech/polkadot.git', branch = "release-v0.9.20", default-features = false }
+sp-core       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+sp-io         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+sp-runtime    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+sp-std        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+xcm           = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }
+xcm-builder   = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }
+xcm-executor  = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }
 
 
 [dev-dependencies]
-sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 
 [features]
 default = ['std']
