--- a/pallets/currency-adapter/Cargo.toml
+++ b/pallets/currency-adapter/Cargo.toml
@@ -9,11 +9,11 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec         = { package = 'parity-scale-codec', version = '3.0.0', features = ['max-encoded-len'], default-features = false }
-frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
-frame-system  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+frame-system  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
 primitives    = { package = 'primitives', path = '../../primitives', default-features = false }
 scale-info    = { version = '2.1', default-features = false, features = ['derive'] }
-sp-runtime    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
+sp-runtime    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
 
 [features]
 default     = ['std']
