--- a/pallets/xcm-helper/Cargo.toml
+++ b/pallets/xcm-helper/Cargo.toml
@@ -9,43 +9,43 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec              = { package = 'parity-scale-codec', version = '3.0.0', features = ['max-encoded-len'], default-features = false }
-frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false, optional = true }
-frame-support      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
-frame-system       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
-pallet-assets      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false, optional = true }
+frame-support      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+frame-system       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+pallet-assets      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
 pallet-traits      = { path = '../traits', default-features = false }
-pallet-xcm         = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20', default-features = false }
+pallet-xcm         = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }
 primitives         = { path = '../../primitives', default-features = false }
 scale-info         = { version = '2.1', default-features = false, features = ['derive'] }
-sp-core            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
-sp-io              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
-sp-runtime         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
-sp-std             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20', default-features = false }
-xcm                = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20', default-features = false }
-xcm-executor       = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20', default-features = false }
+sp-core            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+sp-io              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+sp-runtime         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+sp-std             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+xcm                = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }
+xcm-executor       = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", default-features = false }
 
 [dev-dependencies]
-cumulus-pallet-dmp-queue        = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.20' }
-cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.20' }
-cumulus-pallet-xcm              = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.20' }
-cumulus-pallet-xcmp-queue       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.20' }
-kusama-runtime                  = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20', features = ['runtime-benchmarks'] }
-orml-xcm-support                = { git = 'https://github.com/NodleCode/open-runtime-module-library.git', branch = 'polkadot-v0.9.20' }
-orml-xtokens                    = { git = 'https://github.com/NodleCode/open-runtime-module-library.git', branch = 'polkadot-v0.9.20' }
-pallet-babe                     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20' }
-pallet-balances                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20' }
-pallet-session                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20' }
-pallet-timestamp                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20' }
-pallet-utility                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20' }
-parachain-info                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.20' }
-polkadot-core-primitives        = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20' }
-polkadot-parachain              = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20' }
-polkadot-runtime-parachains     = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20' }
+cumulus-pallet-dmp-queue        = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
+cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
+cumulus-pallet-xcm              = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
+cumulus-pallet-xcmp-queue       = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
+kusama-runtime                  = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22", features = ['runtime-benchmarks'] }
+orml-xcm-support                = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.22" }
+orml-xtokens                    = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.22" }
+pallet-babe                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+pallet-balances                 = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+pallet-session                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+pallet-timestamp                = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+pallet-utility                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+parachain-info                  = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.22" }
+polkadot-core-primitives        = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
+polkadot-parachain              = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
+polkadot-runtime-parachains     = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
 serde                           = { version = '1.0.136' }
-sp-io                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.20' }
-xcm-builder                     = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20' }
-xcm-executor                    = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20' }
-xcm-simulator                   = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.20' }
+sp-io                           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+xcm-builder                     = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
+xcm-executor                    = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
+xcm-simulator                   = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.22" }
 
 [features]
 default            = ['std']
