--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,11 @@
         "dockerfile": "Dockerfile",
         "context": ".."
     },
+    "runArgs": [
+        "--privileged",
+        "--security-opt",
+        "seccomp=unconfined"
+    ],
     "features": {
         "github-cli": "latest",
         "docker-from-docker": "latest"
