WIP:lost_and_found

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -98,6 +98,38 @@ try-runtime = [
   "frame-executive/try-runtime",
   "frame-try-runtime",
   "frame-system/try-runtime",
+	"cumulus-pallet-aura-ext/try-runtime",
+	"cumulus-pallet-dmp-queue/try-runtime",
+	"cumulus-pallet-parachain-system/try-runtime",
+	"cumulus-pallet-xcm/try-runtime",
+	"frame-executive/try-runtime",
+	"frame-system/try-runtime",
+	"frame-try-runtime",
+	"pallet-aura/try-runtime",
+	"pallet-authorship/try-runtime",
+	"pallet-balances/try-runtime",
+	# "pallet-collator-selection/try-runtime",
+	"pallet-session/try-runtime",
+	"pallet-timestamp/try-runtime",
+	"pallet-transaction-payment/try-runtime",
+	"parachain-info/try-runtime",
+
+  "frame-support/try-runtime",
+  "pallet-allocations/try-runtime",
+  "pallet-collective/try-runtime",
+  "pallet-grants/try-runtime",
+  "pallet-im-online/try-runtime",
+  "pallet-multisig/try-runtime",
+  "pallet-scheduler/try-runtime",
+  "pallet-preimage/try-runtime",
+  "pallet-timestamp/try-runtime",
+  "pallet-uniques/try-runtime",
+  "pallet-utility/try-runtime",
+    "pallet-membership/try-runtime",
+       "pallet-authorship/try-runtime",
+       "pallet-session/try-runtime",
+       "pallet-multisig/try-runtime",
+       "cumulus-pallet-aura-ext/try-runtime",
 ]
 
 [dependencies]
