--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -95,8 +95,15 @@ runtime-benchmarks = [
   "sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [
+
+    # "pallet-reserve/try-runtime",
   "frame-executive/try-runtime",
   "frame-try-runtime",
+  # "primitives/try-runtime",
+  "pallet-poa/try-runtime",
+  "pallet-grants/try-runtime",
+  # "pallet-mandate/try-runtime",
+
   "frame-system/try-runtime",
 	"cumulus-pallet-aura-ext/try-runtime",
 	"cumulus-pallet-dmp-queue/try-runtime",
