fix: use all the pallet's try-runtime feature for try-runtime

--- a/pallets/mandate/Cargo.toml
+++ b/pallets/mandate/Cargo.toml
@@ -16,6 +16,7 @@ std = [
   "sp-runtime/std",
   "sp-std/std",
 ]
+try-runtime = ["frame-support/try-runtime"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
