--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -98,6 +98,30 @@ try-runtime = [
   "frame-executive/try-runtime",
   "frame-try-runtime",
   "frame-system/try-runtime",
+  "frame-support/try-runtime",
+  "pallet-allocations/try-runtime",
+  "pallet-authority-discovery/try-runtime",
+  "pallet-authorship/try-runtime",
+  "pallet-balances/try-runtime",
+  "pallet-collective/try-runtime",
+  "pallet-grants/try-runtime",
+  "pallet-im-online/try-runtime",
+  "pallet-mandate/try-runtime",
+  "pallet-membership/try-runtime",
+  "pallet-multisig/try-runtime",
+  "pallet-offences/try-runtime",
+  "pallet-poa/try-runtime",
+  "pallet-randomness-collective-flip/try-runtime",
+  "pallet-reserve/try-runtime",
+  "pallet-scheduler/try-runtime",
+  "pallet-preimage/try-runtime",
+  "pallet-session/try-runtime",
+  "pallet-timestamp/try-runtime",
+  "pallet-transaction-payment/try-runtime",
+  "pallet-uniques/try-runtime",
+  "pallet-utility/try-runtime",
+  "pallet-aura/try-runtime",
+  #"pallet-xcm/try-runtime",
 ]
 
 [dependencies]
