Nightly is failing for clippy
try a known good version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 env:
-  nightly: nightly
+  nightly: nightly-2022-09-20
   target: wasm32-unknown-unknown
   tarpaulin-vers: "0.20.0"
   try-runtime-chain: dev
