--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,10 @@ jobs:
           path: |
             output.txt
 
+  tarpaulin:
+    runs-on: ubuntu-latest-16-cores
+    steps:
+      - uses: actions/checkout@v2
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
@@ -94,9 +98,8 @@ jobs:
         with:
           fail_ci_if_error: false
 
-
   try-runtime:
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ubuntu-latest-8-cores
     steps:
       - uses: actions/checkout@v2
 
