Try runtime will hang from time to time, give it a reasonable timeout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,13 @@ jobs:
     runs-on: ubuntu-latest-16-cores
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ env.nightly }}
+          override: true
+          target: ${{ env.target }}
+
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
@@ -100,6 +107,7 @@ jobs:
 
   try-runtime:
     runs-on: ubuntu-latest-8-cores
+    timeout-minutes: 40
     steps:
       - uses: actions/checkout@v2
 
