Add cache for try-runtime

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,6 +110,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Unpack
+        run: bunzip2 .maintain/paradis-snapshot-full.top.bz2; bunzip2 .maintain/paradis-snapshot-full.child.bz2
+
       - name: Install latest stable Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -129,4 +132,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade live -u ${{ env.try-runtime-uri }}
+          args: --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade  snap --snapshot-path=".maintain/paradis-snapshot-full"
