Restore Tarpaulin job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,8 +94,10 @@ jobs:
           target: ${{ env.target }}
 
       - name: Run cargo-tarpaulin
-        run: |
-          cargo tarpaulin --avoid-cfg-tarpaulin --all-features --workspace --timeout 120 --exclude runtimes-eden nodle-parachain --exclude-files **/mock.rs **/weights.rs **/migrations.rs
+        uses: actions-rs/tarpaulin@v0.1
+        with:
+          version: ${{ env.tarpaulin-vers }}
+          args: "--avoid-cfg-tarpaulin --all-features --workspace --timeout 120 --exclude runtimes-eden nodle-parachain --exclude-files **/mock.rs **/weights.rs **/migrations.rs"
 
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3.0.0
