Change action-rs to maintained fork

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          profile: minimal
           toolchain: ${{ env.nightly }}
-          override: true
           target: ${{ env.target }}
           components: rustfmt,clippy
 
@@ -86,11 +84,9 @@ jobs:
     runs-on: ubuntu-latest-16-cores
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          profile: minimal
           toolchain: ${{ env.nightly }}
-          override: true
           target: ${{ env.target }}
 
       - name: Run cargo-tarpaulin
@@ -122,12 +118,10 @@ jobs:
         id: get_version
 
       - name: Install Rust nightly
-        uses: actions-rs/toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          profile: minimal
           toolchain: ${{ env.nightly }}
           target: ${{ env.target }}
-          default: true
       - name: Cache a dir
         uses: actions/cache@v3
         id: cachedir
