--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,11 +49,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-build-target-
 
-      - name: Fmt
-        uses: actions-rs/cargo@v1
-        with:
-          toolchain: ${{ env.nightly }}
-          command: fmt
+      - name: Rustfmt Check
+        uses: actions-rust-lang/rustfmt@v1
 
       - name: Clippy
         uses: actions-rs/clippy-check@v1
@@ -87,7 +84,7 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.nightly }}
-          target: ${{ env.target }}
+          target: ${{ env.target }}  
 
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
