Remove warnings are errors for clippy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
           components: clippy
       - name: Clippy
         run: |
+           unset RUSTFLAGS
            cargo clippy --all-features -- -W clippy::type_complexity -W clippy::identity_op -W clippy::boxed_local -D dead_code
   rustfmt:
     runs-on: ubuntu-latest-8-cores
