--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,10 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.nightly }}
+          target: ${{ env.target }}
           components: clippy
-      - name: Clippy
         run: |
-           unset RUSTFLAGS
-           cargo clippy --all-features -- -W clippy::type_complexity -W clippy::identity_op -W clippy::boxed_local -D dead_code
+          cargo clippy --all-features -- -W clippy::type_complexity -W clippy::identity_op -W clippy::boxed_local -D dead_code
   rustfmt:
     runs-on: ubuntu-latest-8-cores
     steps:
