--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           toolchain: ${{ env.nightly }}
           target: ${{ env.target }}
           components: clippy
-        run: |
+      - run: |
           cargo clippy --all-features -- -W clippy::type_complexity -W clippy::identity_op -W clippy::boxed_local -D dead_code
   rustfmt:
     runs-on: ubuntu-latest-8-cores
