--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ env:
   try-runtime-uri: wss://eden-rpc.dwellir.com:443
 
 jobs:
-  clippy:
+  clippy_lint:
     runs-on: ubuntu-latest-8-cores
     steps:
       - uses: actions/checkout@v3
@@ -25,6 +25,8 @@ jobs:
           components: clippy
       - run: |
           cargo clippy --all-features -- -W clippy::type_complexity -W clippy::identity_op -W clippy::boxed_local -D dead_code
+        name: clippy
+        id: clippy
   rustfmt:
     runs-on: ubuntu-latest-8-cores
     steps:
