Try to find problem matcher

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest-8-cores
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
+      - uses: simonsso/setup-rust-toolchain@3e6d37ed872f06ac05163892a1da6390caab6086
         with:
           toolchain: ${{ env.nightly }}
           target: ${{ env.target }}
