Use actions-rust-lang/setup-rust-toolchain addon

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest-8-cores
     steps:
       - uses: actions/checkout@v3
-      - uses: simonsso/setup-rust-toolchain@3b513b9b4098bc5ff24c930d279f9501375a1a09
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.nightly }}
           target: ${{ env.target }}
