Add backbone for pallet asset integration

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -41,6 +41,7 @@ std = [
   "pallet-contracts-rpc-runtime-api/std",
   "pallet-contracts/std",
   "pallet-xcm/std",
+  "pallet-assets/std",
   "polkadot-parachain/std",
   "polkadot-runtime-common/std",
   "xcm/std",
@@ -95,6 +96,7 @@ runtime-benchmarks = [
   "pallet-membership/runtime-benchmarks",
   "pallet-contracts/runtime-benchmarks",
   "pallet-xcm/runtime-benchmarks",
+  "pallet-assets/runtime-benchmarks",
   "xcm/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
   "xcm-executor/runtime-benchmarks",
@@ -129,6 +131,7 @@ try-runtime = [
   "pallet-aura/try-runtime",
   "pallet-collator-selection/try-runtime",
   "pallet-contracts/try-runtime",
+  "pallet-assets/try-runtime",
   "cumulus-pallet-aura-ext/try-runtime",
   "cumulus-pallet-dmp-queue/try-runtime",
   "cumulus-pallet-parachain-system/try-runtime",
@@ -184,6 +187,7 @@ pallet-aura = { git = "https://github.com/paritytech/substrate.git", default-fea
 cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29", default-features = false }
 pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.29" }
 
+pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
